--- a/great-idea/services.html
+++ b/great-idea/services.html
@@ -1,107 +1,142 @@
 <!doctype html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
 
-  <title>Great Idea!</title>
+  <head>
+    <meta charset="utf-8">
 
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
-  <link rel="stylesheet" href="css/index.css">
+    <title>Great Idea! Services</title>
 
-  <!--[if lt IE 9]>
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+    <link rel="stylesheet" href="css/index.css">
+
+    <!--[if lt IE 9]>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
   <![endif]-->
-</head>
+  </head>
 
-<body>
+  <body>
+    <div class="container">
+      <header>
+        <nav>
+          <a>Services</a>
+          <a>Product</a>
+          <a>Vision</a>
+          <a>Features</a>
+          <a>About</a>
+          <a>Contact</a>
+        </nav>
+        <div class="logo-container">
+          <a href="index.html" class="logo">
+            <img src="img/logo.png" alt="Great Idea! Company logo.">
+          </a>
+        </div>
+      </header>
+      <section>
+        <img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+      </section>
+      <section class="hundo brdr-bttm">
+        <div class="full">
+        <h4>Services</h4>
 
+        <p>Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus
+        rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus
+        et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod
+        facilisis iaculis.</p>
+        </div>
+      </section>
+      <section class="wrap brdr-bttm">
+        <div class="gray-box">
+          <h4>Digital Design</h4>
 
-Services
-Product
-Vision
-Features
-About
-Contact
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
-<img class="logo" src="img/logo.png" alt="Great Idea! Company logo.">
+          <button class="grey-btn clear-btn">Learn More</button>
 
+        </div>
+        <div class="gray-box inline-block">
+          <h4>UX / UI</h4>
 
-<img class="services-header-img" src="img/services-header.jpg" alt="Our services header image">
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
-Services
+          <button class="grey-btn clear-btn">Learn More</button>
+        </div>
+        <div class="gray-box">
+          <h4>Digital Marketing</h4>
 
-Our services provide the best digital value in nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque eleifend. Mauris euismod facilisis iaculis.
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
+          <button class="grey-btn clear-btn">Learn More</button>
 
-Digital Design
+        </div>
+        <div class="gray-box">
+          <h4>Web Development</h4>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
-Learn More
+          <button class="grey-btn clear-btn">Learn More</button>
+        </div>
 
+        <div class="gray-box">
+          <h4>iOS Development</h4>
 
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
-UX / UI
+          <button class="grey-btn clear-btn">Learn More</button>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+        </div>
+        <div class="gray-box">
+          <h4>Android Development</h4>
 
-Learn More
+          <p>Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor.
+          Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem
+          neque, sed faucibus nibh pellentesque
+          eleifend. Mauris euismod facilisis iaculis.</p>
 
+          <button class="grey-btn clear-btn">Learn More</button>
+        </div>
+      </section>
+    <section class="horizontally">
+        <div class="inline-block">
+      <h4>Some Facts About Our Services</h4>
 
+      <p class="inline-p">Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris
+      consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed
+      faucibus nibh pellentesque
+      eleifend. Mauris euismod facilisis iaculis.</p>
 
-Digital Marketing
+<ul>
+     <li> Awesome thing</li>
+      <li>Amazing thing</li>
+      <li>Cool thing</li>
+      <li>Great thing</li>
+</ul>
+</div>
+<div class="inline-block">
+      <img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
+</div>
+      </section>
+<footer>
 
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
+    <p class="copy">  Copyright Great Idea! 2018</p>
+</footer>
 
-Learn More
-
-
-
-Web Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-iOS Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-
-Android Development
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-Learn More
-
-
-Some Facts About Our Services
-
-Nulla suscipit interdum diam at maximus. Proin vitae tellus rutrum, accumsan nunc sit amet, iaculis tortor. Mauris consectetur feugiat justo quis aliquet. Curabitur cursus et justo eu consequat. Fusce finibus sem neque, sed faucibus nibh pellentesque
-eleifend. Mauris euismod facilisis iaculis.
-
-
-Awesome thing
-Amazing thing
-Cool thing
-Great thing
-
-<img class="services-info-img" src="img/services-info.png" alt="one of our employees hard at work">
-
-Copyright Great Idea! 2018
-
-</body>
+      </div>
+  </body>
 
 </html>
